--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
+
 spring.application.name=demo
-# ????
+
 server.port=8080
 
-# MySQL ?????
-spring.datasource.url=jdbc:mysql://localhost:3306/crm_demo?useSSL=false&serverTimezone=PRC&characterEncoding=utf8
+
+spring.datasource.url=jdbc:mysql://localhost:3306/crm_demo?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=shi@6326596
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA ??
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
